--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -14,8 +14,7 @@
                         <img class="buffer__figure" src="" alt="figure">
                     </div>
                 </div>
-                <canvas id="game">
-                </canvas>
+                <canvas id="game"></canvas>
                 <div class="next__figure">
                     <p class="title">Следующие</p>
                     <div class="wrapper-figures">
