--- a/public/css/multiplayer.css
+++ b/public/css/multiplayer.css
@@ -5,6 +5,21 @@
     text-decoration: none;
 }
 
+#game
+{
+    max-height: 683px;
+    padding: 0 3px 3px 3px;
+    background-color: white;
+}
+
+.other-field
+{
+    padding: 0 3px 3px 3px;
+    background-color: white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .main   
 {
     width: 100%;
@@ -33,6 +48,21 @@
     justify-content: flex-start;
 }
 
+.wrapper-field
+{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+.title{
+    font: 800 20px/20px "Russo One", sans-serif;
+    background-color: white;
+    padding: 5px 0;
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+}
 
 .buffer-wrapper
 {
@@ -45,10 +75,9 @@
 
 .game__buffer
 {
-    width: 171px;
+    width: 167px;
     height: 134px;
     box-sizing: border-box;
-    padding: 0 2px 2px 3px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -63,6 +92,19 @@
     background-image: url(/images/next_figures.png);
     background-size: 100% 100%;
 }
+
+.wrapper-figures
+{
+    width: 100%;
+    height: 511px;
+    padding: 50px 0;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
 
 .border-game
 {
@@ -83,35 +125,12 @@
 
 .wrapper-game
 {
-    display: none;
+    display: flex;
     align-items: flex-start ;
     justify-content: space-between;
     width: 100%;
     box-sizing: border-box;
     padding: 0 85px;
-}
-
-.wrapper-game.started {
-    display: flex;
-}
-
-.game-mode-menu__button
-{
-    width: 100px;
-    height: 80px;
-}
-
-.game-mode-menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    background-color: #0006;
-    top: 0;
-    left: 0;
 }
 
 .palyers-list
@@ -121,7 +140,7 @@
     flex-wrap: wrap;
     height: 100%;
     width: 50%;
-    gap: 30px 13%;
+    gap: 0 13%;
 }
 
 .other-player
@@ -132,12 +151,11 @@
     align-items: center;
 }
 
-.player__score, .player__username
+.player__score, 
+.player__username
 {
     color: white;
     text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
     font: 800 22px/22px "Russo One", sans-serif;
 }
 
@@ -147,7 +165,11 @@
     background-color: white;
 }
 
-.game__score, .game__level, .title-score, .title-level, .player_name
+.game__score, 
+.game__level, 
+.title-score, 
+.title-level, 
+.player_name
 {
     color: white;
     text-align: center;
