накладываю js на лобби

--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -57,7 +57,7 @@
                 <button class="link">КРЕСТЬЯНИН</button>
                 <button class="link">БОЯРИН</button>
             </div>
-            <a href="/multiplayer">Начать игру</a>
+            {# <a href="/multiplayer">Начать игру</a> #}
         </div>
         <div class="user-profile">
             <div class="user-profile__header">
