--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -64,7 +64,8 @@
 }
 
 .settings{
-    width: 1050px;
+    max-width: 1050px;
+    width: 100%;
 }
 
 .settings__header{
@@ -74,14 +75,21 @@
 
 .settings__text{
     font-size: 28px; 
+    padding-left: 10px;
+    
 }
 
-.settings__size, .settings__music, .settings__complexity, .settings__background{
+.settings__size, 
+.settings__music, 
+.settings__complexity, 
+.settings__background{
+    background-color: #141414;
     display: inline-flex;
-    width: 1050px;
+    max-width: 1050px;
+    width: 100%;
     height: 43px;
     text-align: left;
-    border-bottom: 2px solid #141414;
+    border-bottom: 2px solid #696969;
     margin-bottom: 20px;
 }
 
