--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -16,6 +16,10 @@
         <div class="main">
             <div class="players">
                 <div class="list-players">
+                    <div class="list-players__count">
+                        <h1 class="players__count">1</h1>
+                        <h1>/4</h1>
+                    </div>
                     <div class="player">
                         <p class="player__name">Никита</p>
                         <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
@@ -84,4 +88,6 @@
             </div>
         </div>
     </div>
+    </body>
+    <script src="/js/socket.js"></script>
 {% endblock %}
