сделал в лобби выбор настроек

--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -36,28 +36,52 @@
                 </div>
             </div>
             <div class="settings">
-                <h1 class="settings__header">НАСТРОЙКИ</h1>
+                <p class="settings__header">НАСТРОЙКИ</p>
 
                 <div class="settings__size">
-                    <h1 class="settings__text">РАЗМЕР ПОЛЯ: </h1>
-                    <h1 class="settings__text">ОГРОМНОЕ</h1>
+                    <p class="settings__text">РАЗМЕР ПОЛЯ: </p>
+                    <div class="setting">
+                        <div class="wrapper-setting">
+                           <p id="size" class="settings__text-size">БИГ</p>
+                           <img class="triangle" src="/images/triangle.png">
+                        </div>
+                        <hr class="line-settings">
+                    </div>
                 </div>
                 <div class="settings__music">
-                    <h1 class="settings__text">МУЗЫКА: </h1>
-                    <h1 class="settings__text">КАРАБЕЙНИКИ</h1>
+                    <p class="settings__text">МУЗЫКА: </p>
+                    <div class="setting">
+                        <div class="wrapper-setting">
+                           <p id="music" class="settings__text-music">КАРАБЕЙНИКИ</p>
+                           <img class="triangle" src="/images/triangle.png">
+                        </div>
+                        <hr class="line-settings">
+                    </div>
                 </div>
                 <div class="settings__complexity">
-                    <h1 class="settings__text">СЛОЖНОСТЬ: </h1>
-                    <h1 class="settings__text">КАК ПОЛЕ ВСПАХАТЬ</h1>
+                    <p class="settings__text">СЛОЖНОСТЬ: </p>
+                    <div class="setting">
+                        <div class="wrapper-setting">
+                          <p id="difficulty" class="settings__text-difficulty">КАК ПОЛЕ ВСПАХАТЬ</p>
+                           <img class="triangle" src="/images/triangle.png">
+                        </div>
+                        <hr class="line-settings">
+                    </div>
                 </div>
                 <div class="settings__background">
-                    <h1 class="settings__text">ЗАДНИЙ ФОН: </h1>
+                    <p class="settings__text">ЗАДНИЙ ФОН: </p>
+                    <div class="setting">
+                        <div class="wrapper-setting">
+                           <p id="bg" class="settings__text-bg">ISPRING</p>
+                           <img class="triangle" src="/images/triangle.png">
+                        </div>
+                        <hr class="line-settings">
+                    </div>
                 </div>
-                <button class="link">ХОЛОП</button>
+                {# <button class="link">ХОЛОП</button>
                 <button class="link">КРЕСТЬЯНИН</button>
-                <button class="link">БОЯРИН</button>
+                <button class="link">БОЯРИН</button> #}
             </div>
-            {# <a href="/multiplayer">Начать игру</a> #}
         </div>
         <div class="user-profile">
             <div class="user-profile__header">
@@ -86,6 +110,10 @@
                     <div class="line"></div>
                     <p>2</p>
                 </div>               
+            </div>
+        </div>
+        <div class="list-settings">
+            <div class="menu">
             </div>
         </div>
     </div>
