--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -11,7 +11,7 @@
 .bg {
     height: 100vh;
     width: 100vw;
-    background: url("../images/bg.png") no-repeat;
+    background: url(/images/bg.png) no-repeat;
     background-size: cover;
 }
 
@@ -68,29 +68,74 @@
     width: 100%;
 }
 
-.settings__header{
+.settings__header
+{
     text-align: center;
     margin-bottom: 215px;
 }
+.settings__text
+{
+    padding-right: 15px;
+    white-space: nowrap;
+}
 
-.settings__text{
-    font-size: 28px; 
-    padding-left: 10px;
+.wrapper-setting
+{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.triangle
+{
+    width: 17px;
+    height: 17px;
+    padding-right: 12px;
+}
+
+
+.settings__text-music, 
+.settings__text-size,
+.settings__text-difficulty,
+.settings__text-bg,
+.settings__text
+{
+    font-size: 26px; 
+}
+
+.setting
+{
+    max-width: 100%;
+    width: 100%;
+    box-sizing: border-box;
     
+}
+
+.line-settings
+{
+    border: none;
+    background-color: #696969; 
+    height: 1px; 
 }
 
 .settings__size, 
 .settings__music, 
 .settings__complexity, 
-.settings__background{
+.settings__background
+{
     background-color: #141414;
-    display: inline-flex;
+    display: flex;
+    align-items: center;
     max-width: 1050px;
     width: 100%;
     height: 43px;
     text-align: left;
-    border-bottom: 2px solid #696969;
+    border-bottom: 1px solid #696969;
     margin-bottom: 20px;
+    box-sizing: border-box;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .user-profile{
@@ -151,3 +196,46 @@
     height: 1px;
     background-color: #243e25;
 }
+
+.list-settings
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(10px);
+    display: none;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+
+.menu__item {
+    width: 100%;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    box-sizing: border-box;
+    padding: 9px;
+    display: flex;
+    flex-direction: column;
+    background-color: #1a161d;
+    border-top: 3px solid #453351;
+    border-left: 3px solid #392e40;
+    border-bottom: 3px solid #0a080b;
+}
+
+.item__title {
+    color: #dac8e7;
+}
+
+.item__subtitle {
+    color: #7c6b88;
+}
+
+.menu
+{
+    width: 80%;
+}
+
+
