--- a/templates/about.html.twig
+++ b/templates/about.html.twig
@@ -15,7 +15,7 @@
 			<a href="/menu">
 				<div class="back">
 					<h1 class="back__button">
-						НАЗАД
+						назад
 					</h1>
 				</div>
 			</a>
@@ -24,7 +24,7 @@
 					<a href="/game">
 						<div class="link__text">
 							<h1 class="link__title">
-								РОСТИСЛАВ ГЛИЗЕРИН
+								ростислав глизерин
 							</h1>
 							<p class="link__subtitle">
 								!!!
@@ -36,7 +36,7 @@
 					<a href="/game">
 						<div class="link__text">
 							<h1 class="link__title">
-								ИВАН БЕРЕЗИН
+								иван березин
 							</h1>
 							<p class="link__subtitle">
 								???
@@ -48,7 +48,7 @@
 					<a href="/game">
 						<div class="link__text">
 							<h1 class="link__title">
-								ЕЛИСЕЙ КАРАМЫШЕВ
+								елисей карамышев
 							</h1>
 							<p class="link__subtitle">
 								???
@@ -60,7 +60,7 @@
 					<a href="/game">
 						<div class="link__text">
 							<h1 class="link__title">
-								ДМИТРИЙ БЕЛЯЕВ
+								дмитрий беляев
 							</h1>
 							<p class="link__subtitle">
 								???
@@ -72,7 +72,7 @@
 					<a href="/game">
 						<div class="link__text">
 							<h1 class="link__title">
-								НИКИТА ДУДИНОВ
+								никита дудинов
 							</h1>
 							<p class="link__subtitle">
 								???
