--- a/templates/game-over.html.twig
+++ b/templates/game-over.html.twig
@@ -7,11 +7,11 @@
     <div class="bg">
         <div class="results-placeholder">
             <div class="results">
-                <p class="result-title">ФИНАЛЬНЫЙ СЧЕТ</p>
+                <p class="result-title">финальный счет</p>
                 <p class="score">{{lastScore}}</p>
-                <p class="result-title">ЛИЧНЫЙ РЕКОРД</p>
+                <p class="result-title">личный счет</p>
                 <p class="score">{{maxScore}}</p>
-                <p class="result-title">МОЛОДЕЦ! ЕЩЕ НЕМНОГО! ДЕРЖИ МОТИВИРУЮЩЕЕ ВИДЕО!</p>
+                <p class="result-title">молодец! ещё немного! держи мотивирующее видео!</p>
 
                 <div class="video-placeholder">
                     <video controls height="300" poster="/images/cats.jpg">
@@ -20,10 +20,10 @@
                 </video>
             </div>
                 <div class="link">
-                    <h1 class="link__header" onclick="window.location.href = '/game'">СЫГРАТЬ ЗАНОВО</h1>
+                    <h1 class="link__header" onclick="window.location.href = '/game'">сыграть заново</h1>
                 </div>
                 <div class="link">
-                    <h1 class="link__header" onclick="window.location.href = '/menu'">ВЕРНУТЬСЯ В МЕНЮ</h1>
+                    <h1 class="link__header" onclick="window.location.href = '/menu'">вернуться в меню</h1>
                 </div>
             </div>
 
