--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -10,7 +10,7 @@
             <img src="/images/settings.png" alt="settings" class="set">
             <img src="/images/logo.png" alt="logo" class="logo">
             <div class="profile">
-                <p class="profile__nickname">{{user.login ?? 'Славянин'}}</p>
+                <p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
                 <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
             </div>
         </div>
@@ -18,52 +18,52 @@
             <div class="players">
                 <div class="list-players">
                     <div class="player">
-                        <p class="player__name">Никита</p>
+                        <p class="player__name">никита</p>
                         <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
                     </div>
                     <div class="player">
-                        <p class="player__name">Иван</p>
+                        <p class="player__name">иван</p>
                         <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
                     </div>
                     <div class="player">
-                        <p class="player__name">Елисей</p>
+                        <p class="player__name">елисей</p>
                         <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
                     </div>
                     <div class="player">
-                        <p class="player__name">Дима</p>
+                        <p class="player__name">дима</p>
                         <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
                     </div>
                 </div>
             </div>
             <div class="settings">
-                <h1 class="settings__header">НАСТРОЙКИ</h1>
+                <h1 class="settings__header">настройки</h1>
 
                 <div class="settings__size">
-                    <h1 class="settings__text">РАЗМЕР ПОЛЯ: </h1>
-                    <h1 class="settings__text">ОГРОМНОЕ</h1>
+                    <h1 class="settings__text">размер поля: </h1>
+                    <h1 class="settings__text">огромное</h1>
                 </div>
                 <div class="settings__music">
-                    <h1 class="settings__text">МУЗЫКА: </h1>
-                    <h1 class="settings__text">КАРАБЕЙНИКИ</h1>
+                    <h1 class="settings__text">музыка: </h1>
+                    <h1 class="settings__text">карабейники</h1>
                 </div>
                 <div class="settings__complexity">
-                    <h1 class="settings__text">СЛОЖНОСТЬ: </h1>
-                    <h1 class="settings__text">КАК ПОЛЕ ВСПАХАТЬ</h1>
+                    <h1 class="settings__text">сложность: </h1>
+                    <h1 class="settings__text">как поле вспахать</h1>
                 </div>
                 <div class="settings__background">
-                    <h1 class="settings__text">ЗАДНИЙ ФОН: </h1>
+                    <h1 class="settings__text">задний фон: </h1>
                 </div>
-                <button class="link">ХОЛОП</button>
-                <button class="link">КРЕСТЬЯНИН</button>
-                <button class="link">БОЯРИН</button>
+                <button class="link">холоп</button>
+                <button class="link">крестьянин</button>
+                <button class="link">боярин</button>
             </div>
-            <a href="/multiplayer">Начать игру</a>
+            <a href="/multiplayer">начать игру</a>
         </div>
         <div class="user-profile">
             <div class="user-profile__header">
                 <div class="user-profile__player">
                     <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
-                    <p class="profile__nickname">{{user.login ?? 'Славянин'}}</p>
+                    <p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
                 </div>
                 <div class="user-profile__exit">
                     <button class="exit">Exit</button>
@@ -72,17 +72,17 @@
             </div>
             <div class="statistics">
                 <div class="max-score">
-                    <p class="statistics__text">МАКСИМУМ ОЧКОВ</p>
+                    <p class="statistics__text">максимум очков</p>
                     <div class="line"></div>
                     <p>14100</p>
                 </div>
                 <div class="count-win">
-                    <p class="statistics__text">ВСЕГО ПОБЕД</p>
+                    <p class="statistics__text">всего побед</p>
                     <div class="line"></div>
                     <p>11</p>
                 </div>
                 <div class="count-game">
-                    <p class="statistics__text">ВСЕГО ИГР</p>
+                    <p class="statistics__text">всего игр</p>
                     <div class="line"></div>
                     <p>2</p>
                 </div>               
