--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -15,7 +15,7 @@
 			<div class="profile">
 				<a href="{{(user.login ?? null) ? path("profile", {login: user.login}) : path('register') }}">
 					<div class="profile">
-						<p class="profile__nickname">{{user.login ?? 'Славянин'}}</p>
+						<p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
 						<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
 					</div>
 				</a>
@@ -30,10 +30,10 @@
 					</div>
 					<div class="link__text">
 						<h1 class="link__title solo__title">
-							ОДНОПОЛЬЗОВАТЕЛЬСКИЙ РЕЖИМ
+							однопользовательский режим
 						</h1>
 						<p class="link__subtitle solo__subtitle">
-							ПРЕВЗОЙДИ СЕБЯ И ПОСТАВЬ НОВЫЙ РЕКОРД
+							превзойди себя и поставь новый рекорд
 						</p>
 					</div>
 				</a>
@@ -43,10 +43,10 @@
 					</div>
 					<div class="link__text">
 						<h1 class="link__title multiplayer__title">
-							МНОГОПОЛЬЗОВАТЕЛЬСКИЙ РЕЖИМ
+							многопользовательский режим
 						</h1>
 						<p class="link__subtitle multiplayer__subtitle">
-							ИГРАЙТЕ ОНЛАЙН С ДРУЗЬЯМИ
+							играйте онлайн с друзьями
 						</p>
 					</div>
 				</a>
@@ -56,10 +56,10 @@
 					</div>
 					<div class="link__text">
 						<h1 class="link__title about__title">
-							ПРО НАС
+							про нас
 						</h1>
 						<p class="link__subtitle about__subtitle">
-							УЗНАЙТЕ ВСЕ О СЛАВЯНАХ
+							узнайте все о славянах
 						</p>
 					</div>
 				</a>
