--- a/templates/multiplayer.html.twig
+++ b/templates/multiplayer.html.twig
@@ -8,10 +8,10 @@
         <img class="logo" src="/images/logo.png" alt="logo">
         <div class="wrapper-game">
             <div class="wrapper-main-field">
-                <p class="player_name">Никита</p>
+                <p class="player_name">никита</p>
                 <div class="main-field">
                     <div class="game__buffer"> 
-                        <p class="title">Буффер</p>
+                        <p class="title">буффер</p>
                         <div class="buffer-wrapper">
                             <img class="buffer__figure" src="" alt="figure">
                         </div>
@@ -19,7 +19,7 @@
                     <canvas id="game">    
                     </canvas>
                     <div class="next__figure">
-                        <p class="title">Следующие</p>
+                        <p class="title">следующие</p>
                         <div class="wrapper-figures">
                             <img class="figure"  src="" alt="figure">
                             <img class="figure"  src="" alt="figure">
@@ -39,17 +39,17 @@
             </div>
             <div class="palyers-list">
                 <div class="other-player">
-                    <p class="player__username">Иван</p>
+                    <p class="player__username">иван</p>
                     <canvas class="other-field"></canvas>
                     <p class="player__score">200</p>
                 </div>
                 <div class="other-player">
-                    <p class="player__username">Петр</p>
+                    <p class="player__username">петр</p>
                     <canvas class="other-field"></canvas>
                     <p class="player__score">200</p>
                 </div>
                 <div class="other-player">
-                    <p class="player__username">Николай</p>
+                    <p class="player__username">николай</p>
                     <canvas class="other-field"></canvas>
                     <p class="player__score">200</p>
                 </div>
