--- a/templates/select-classic-mode.html.twig
+++ b/templates/select-classic-mode.html.twig
@@ -16,7 +16,7 @@
 				<a href="/{{ user.login ?? 'signup' }}">
 					<div class="profile">
 						<p class="profile__nickname">
-							{{ user.login ?? 'Славянин' }}
+							{{ user.login ?? 'славянин' }}
 						</p>
 						<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar"/>
 					</div>
@@ -27,7 +27,7 @@
 			<a href="/menu">
 				<div class="back">
 					<h1 class="back__button">
-						НАЗАД
+						назад
 					</h1>
 				</div>
 			</a>
@@ -35,20 +35,20 @@
 				<div class="link">
 					<div class="link__text">
 						<h1 class="link__title">
-							ХОЛОП
+							холоп
 						</h1>
 						<p class="link__subtitle">
-							МАЛЕНЬКИЙ РАЗМЕР ПОЛЯ И МЕДЛЕННАЯ ИГРА
+							маленький размер поля и медленная игра
 						</p>
 					</div>
 				</div>
 				<div class="link">
 					<div class="link__text">
 						<h1 class="link__title">
-							КРЕСТЬЯНИН
+							крестьянин
 						</h1>
 						<p class="link__subtitle">
-							КЛАССИЧЕСКИЕ РАЗМЕР ПОЛЯ И СКОРОСТЬ ИГРЫ
+							классические размер поля и скорость игры
 						</p>
 					</div>
 				</div>
@@ -58,7 +58,7 @@
 							БОЯРИН
 						</h1>
 						<p class="link__subtitle">
-							БОЛЬШОЙ РАЗМЕР ПОЛЯ И БЫСТРАЯ ИГРА
+							большой размер поля и быстрая игра
 						</p>
 					</div>
 				</div>
