--- a/templates/select-mode.html.twig
+++ b/templates/select-mode.html.twig
@@ -15,7 +15,7 @@
 				<a href="/{{ user.login ?? 'signup' }}">
 					<div class="profile">
 						<p class="profile__nickname">
-							{{ user.login ?? 'Славянин' }}
+							{{ user.login ?? 'славянин' }}
 						</p>
 						<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar"/>
 					</div>
@@ -26,7 +26,7 @@
 			<a href="/menu">
 				<div class="back">
 					<h1 class="back__button">
-						НАЗАД
+						назад
 					</h1>
 				</div>
 			</a>
@@ -37,10 +37,10 @@
 					</div>
 					<div class="link__text">
 						<h1 class="link__title custom__title">
-							СОЗДАТЬ ЛОББИ
+							создать лобби
 						</h1>
 						<p class="link__subtitle custom__subtitle">
-							КАСТОМИЗИРУЙ ИГРУ И СРАЗИСЬ С ДРУЗЬЯМИ
+							кастомизируй игру и сразись с друзьями
 						</p>
 					</div>
 				</a>
@@ -50,9 +50,9 @@
 					</div>
 					<div class="link__text">
 						<h1 class="link__title listing__title">
-							ВОЙТИ В ЛОББИ
+							войти в лобби
 						</h1>
-						<p class="link__subtitle listing__subtitle">СРАЗИСЬ С ДРУЗЬЯМИ НА ИХ ПРАВИЛАХ
+						<p class="link__subtitle listing__subtitle">сразись с друзьями на их правилах
 						</p>
 					</div>
 				</a>
