--- a/templates/select-solo-mode.html.twig
+++ b/templates/select-solo-mode.html.twig
@@ -15,7 +15,7 @@
 				<a href="/{{ user.login ?? 'signup' }}">
 					<div class="profile">
 						<p class="profile__nickname">
-							{{ user.login ?? 'Славянин' }}
+							{{ user.login ?? 'славянин' }}
 						</p>
 						<img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar"/>
 					</div>
@@ -26,7 +26,7 @@
 			<a href="/menu">
 				<div class="back">
 					<h1 class="back__button">
-						НАЗАД
+						назад
 					</h1>
 				</div>
 			</a>
@@ -37,10 +37,10 @@
 					</div>
 					<div class="link__text">
 						<h1 class="link__title zen__title">
-						КЛАССИЧЕСКИЙ РЕЖИМ
+						классический режим
 						</h1>
 						<p class="link__subtitle zen__subtitle">
-						ПОПРОБУЙ СВОИ СИЛЫ В КЛАССИЧЕСКОМ ТЕТРИСЕ БЕЗ ОГРАНИЧЕНИЙ
+						попробуй свои силы в классическом тетрисе без ограничений
 						</p>
 					</div>
 				</a>
@@ -50,10 +50,10 @@
 					</div>
 					<div class="link__text">
 						<h1 class="link__title blitz__title">
-						БЛИТЦ
+						блитц
 						</h1>
 						<p class="link__subtitle blitz__subtitle">
-						ДВУХМИНУТНАЯ БИТВА ПРОТИВ ВРЕМЕНИ
+						двухминутная битва против времени
 						</p>
 					</div>
 				</a>
@@ -63,10 +63,10 @@
 					</div>
 					<div class="link__text">
 						<h1 class="link__title l40__title">
-						40 ЛИНИЙ
+						40 линиий
 						</h1>
 						<p class="link__subtitle l40__subtitle">
-						СОБЕРИ 40 ЛИНИЙ КАК МОЖНО БЫСТРЕЕ
+						собери 40 линиий как можно быстрее
 						</p>
 					</div>
 				</a>
@@ -76,10 +76,10 @@
 					</div>
 					<div class="link__text">
 						<h1 class="link__title bot__title">
-						БИТВА С БОССОМ
+						битва с боссом
 						</h1>
 						<p class="link__subtitle bot__subtitle">
-						СМОЖЕШЬ СПРАВИТЬСЯ С ИСКУСТВЕННЫМ ИНТЕЛЕКТОМ?
+						сможешь справиться с искуственным интеллектом?
 						</p>
 					</div>
 				</a>
