--- a/public/css/register-style.css
+++ b/public/css/register-style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: "Russo One", sans-serif;
     text-decoration: none;
+    text-transform: uppercase;
 }
 body{
     max-width: 100%;
