--- a/public/css/select.css
+++ b/public/css/select.css
@@ -5,6 +5,7 @@
     font-family: "Russo One", sans-serif;
     font-weight: 400;
     user-select: none;
+    text-transform: uppercase;
 }
 
 .bg {
