--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -9,7 +9,7 @@
         <div class="wrapper-game">
             <div class="wrapper-field">
                 <div class="game__buffer"> 
-                    <p class="title">Буффер</p>
+                    <p class="title">буффер</p>
                     <div class="buffer-wrapper">
                         <img class="buffer__figure" src="" alt="figure">
                     </div>
