--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,7 +9,7 @@
             <img class="logo" src="/images/logo.svg" alt="logo">
         </div>
         <div class="login">
-            <h1 class="login__title">ДОБРО ПОЖАЛОВАТЬ В СЛАВЯНСКИЙ ТЕТРИС!</h1>
+            <h1 class="login__title">добро пожаловать в славянский тетрис!</h1>
             <form method="post" class="login-input">
                 {% if app.user %}
                     <div class="mb-3">
@@ -17,19 +17,19 @@
                     </div>
                 {% endif %}
                 {% if error %}
-                    <p class="login-input__username-error">НЕВЕРНЫЙ ЛОГИН ИЛИ ПАРОЛЬ</p>
+                    <p class="login-input__username-error">неверный логин или пароль</p>
                 {% endif %}
                 <label for="inputLogin" hidden>Login</label>
-                <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="login-input__username-input" autocomplete="username" placeholder="ЛОГИН" required autofocus>
-                <p class="login-input__username-validation">НЕПРАВИЛЬНЫЙ ФОРМАТ ЛОГИНА</p>
-                <p class="login-input__username-require">ВВЕДИТЕ ЛОГИН</p>
+                <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="login-input__username-input" autocomplete="username" placeholder="логин" required autofocus>
+                <p class="login-input__username-validation">неправильный формат логина</p>
+                <p class="login-input__username-require">введите логин</p>
                 <label for="inputPassword" hidden>Password</label>
-                <input type="password" name="password" id="inputPassword" class="login-input__password-input" autocomplete="current-password" placeholder="ПАРОЛЬ" required>
+                <input type="password" name="password" id="inputPassword" class="login-input__password-input" autocomplete="current-password" placeholder="пароль" required>
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                <p class="login-input__password-require">ВВЕДИТЕ ПАРОЛЬ</p>           
+                <p class="login-input__password-require">введите пароль</p>           
                 <div class="login-input__button">
-                    <a class="Register" href="/signup">Регистрация</a> 
-                    <button class="LogIn">Вход</button>
+                    <a class="Register" href="/signup">регистрация</a> 
+                    <button class="LogIn">вход</button>
                 </div>
             </form>    
         </div>
