--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -9,22 +9,22 @@
             <img class="logo" src="/images/logo.svg">
         </div>
         <div class="login">
-            <p class="login__title">ДОБРО ПОЖАЛОВАТЬ В СЛАВЯНСКИЙ ТЕТРИС!</p>
+            <p class="login__title">добро пожаловать в славянский тетрис!</p>
             {{ form_start(form, { 'attr' : { 'class': 'login-input' }})}}
-            {{ form_widget(form.login, { 'attr' : { 'class': 'login-input__username-input', 'placeholder': 'ЛОГИН'}})}}
-            <p class="login-input__username-validation">НЕПРАВИЛЬНЫЙ ФОРМАТ ЛОГИНА</p>
-            <p class="login-input__username-require">ВВЕДИТЕ ЛОГИН</p>
-            <p class="login-input__username-employment">ТАКОЕ ИМЯ УЖЕ СУЩЕСТВУЕТ</p>
-            {{ form_widget(form.password, { 'attr' : { 'class': 'login-input__password-input', 'placeholder': 'ПАРОЛЬ'}})}}
-            <p class="login-input__password-require">ВВЕДИТЕ ПАРОЛЬ</p>
-            <p class="login-input__password-validation">ПАРОЛЬ ДОЛЖЕН СОДЕРЖАТЬ НЕ МЕНЕЕ 8 СИМВОЛОВ</p>
-            <input class="login-input__password-again" type="password" placeholder="ПОВТОРИТЕ ПАРОЛЬ">
-            <p class="login-input__again-require">ВВЕДИТЕ ПАРОЛЬ</p>
-            <p class="login-input__again-validation">ПАРОЛЬ ДОЛЖЕН СОДЕРЖАТЬ НЕ МЕНЕЕ 8 СИМВОЛОВ</p>
-            <p class="login-input__again-identical">ПАРОЛИ ДОЛЖНЫ БЫТЬ ОДИНАКОВЫМИ</p>
+            {{ form_widget(form.login, { 'attr' : { 'class': 'login-input__username-input', 'placeholder': 'логин'}})}}
+            <p class="login-input__username-validation">неправильный формат логина</p>
+            <p class="login-input__username-require">введите логин</p>
+            <p class="login-input__username-employment">такое имя уже существует</p>
+            {{ form_widget(form.password, { 'attr' : { 'class': 'login-input__password-input', 'placeholder': 'пароль'}})}}
+            <p class="login-input__password-require">введите пароль</p>
+            <p class="login-input__password-validation">пароль должен содержать не менее 8 символов</p>
+            <input class="login-input__password-again" type="password" placeholder="повторите пароль">
+            <p class="login-input__again-require">введите пароль</p>
+            <p class="login-input__again-validation">пароль должен содержать не менее 8 символов</p>
+            <p class="login-input__again-identical">пароли должны должны быть одинаковыми</p>
             <div class="login-input__button">
-                <a class="LogIn" href="/login">Вход</a>
-                <button class="Register">Регистрация</button>
+                <a class="LogIn" href="/login">вход</a>
+                <button class="Register">регистрация</button>
             </div>
             {{ form_end(form) }}
         </div>
