--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -36,51 +36,51 @@
                 </div>
             </div>
             <div class="settings">
-                <p class="settings__header">НАСТРОЙКИ</p>
+                <p class="settings__header">настройки</p>
 
                 <div class="settings__size">
-                    <p class="settings__text">РАЗМЕР ПОЛЯ: </p>
+                    <p class="settings__text">размер поля: </p>
                     <div class="setting">
                         <div class="wrapper-setting">
-                           <p id="size" class="settings__text-size">БИГ</p>
+                           <p id="size" class="settings__text-size">биг</p>
                            <img class="triangle" src="/images/triangle.png">
                         </div>
                         <hr class="line-settings">
                     </div>
                 </div>
                 <div class="settings__music">
-                    <p class="settings__text">МУЗЫКА: </p>
+                    <p class="settings__text">музыка: </p>
                     <div class="setting">
                         <div class="wrapper-setting">
-                           <p id="music" class="settings__text-music">КАРАБЕЙНИКИ</p>
+                           <p id="music" class="settings__text-music">карабейники</p>
                            <img class="triangle" src="/images/triangle.png">
                         </div>
                         <hr class="line-settings">
                     </div>
                 </div>
                 <div class="settings__complexity">
-                    <p class="settings__text">СЛОЖНОСТЬ: </p>
+                    <p class="settings__text">сложность: </p>
                     <div class="setting">
                         <div class="wrapper-setting">
-                          <p id="difficulty" class="settings__text-difficulty">КАК ПОЛЕ ВСПАХАТЬ</p>
+                          <p id="difficulty" class="settings__text-difficulty">как поле вспахать</p>
                            <img class="triangle" src="/images/triangle.png">
                         </div>
                         <hr class="line-settings">
                     </div>
                 </div>
                 <div class="settings__background">
-                    <p class="settings__text">ЗАДНИЙ ФОН: </p>
+                    <p class="settings__text">задний фон: </p>
                     <div class="setting">
                         <div class="wrapper-setting">
-                           <p id="bg" class="settings__text-bg">ISPRING</p>
+                           <p id="bg" class="settings__text-bg">ispring</p>
                            <img class="triangle" src="/images/triangle.png">
                         </div>
                         <hr class="line-settings">
                     </div>
                 </div>
-                {# <button class="link">ХОЛОП</button>
-                <button class="link">КРЕСТЬЯНИН</button>
-                <button class="link">БОЯРИН</button> #}
+                {# <button class="link">холоп</button>
+                <button class="link">крестьянин</button>
+                <button class="link">боярин</button> #}
             </div>
             <a href="/multiplayer">начать игру</a>
         </div>
