--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -119,5 +119,6 @@
         </div>
     </div>
 </body>
+<script src="/js/socket.js"></script>
 <script src="/js/game/game-mode-multiplayer.js"></script>
 {% endblock %}
