--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -2,7 +2,9 @@
 
 {% block title %}Lobby{% endblock %}
 {% block style %}<link rel="stylesheet" href="/css/lobby.css"/>{% endblock %}
-{% block script %}<script src="/js/lobby.js"></script>{% endblock %}
+{% block script %}
+    <script src="/js/lobby.js"></script>
+{% endblock %}
 {% block content %}
 <body>
      <div class="bg">
@@ -78,9 +80,6 @@
                         <hr class="line-settings">
                     </div>
                 </div>
-                {# <button class="link">холоп</button>
-                <button class="link">крестьянин</button>
-                <button class="link">боярин</button> #}
             </div>
             <a href="/multiplayer">начать игру</a>
         </div>
@@ -119,5 +118,4 @@
         </div>
     </div>
 </body>
-<script src="/js/game/game-mode-multiplayer.js"></script>
 {% endblock %}
