--- a/public/css/login.css
+++ b/public/css/login.css
@@ -44,7 +44,8 @@ body
     margin-bottom: 15px;
 }
 
-.login-input__username-input, .login-input__password-input
+.login-input__username-input, 
+.login-input__password-input
 {
     border: none;
     box-sizing: border-box;
@@ -57,7 +58,9 @@ body
     font-size: 32px;
     margin-bottom: 19px;
 }
-.login-input__username-input:not(:placeholder-shown), .login-input__password-input:not(:placeholder-shown)
+
+.login-input__username-input:not(:placeholder-shown), 
+.login-input__password-input:not(:placeholder-shown)
 {
     background:#4b4a4a;
     color: white;       
@@ -99,7 +102,9 @@ body
     border: none;
 }
 
-.login-input__password-require, .login-input__username-validation, .login-input__username-require
+.login-input__password-require, 
+.login-input__username-validation, 
+.login-input__username-require
 {
     font: 400 12px/16px "Russo One", sans-serif;
     text-align: left;
