--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -21,27 +21,10 @@
         <div class="main">
             <div class="players">
                 <div class="list-players">
-                    <div class="player">
-                        <p class="player__name">никита</p>
-                        <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
-                    </div>
-                    <div class="player">
-                        <p class="player__name">иван</p>
-                        <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
-                    </div>
-                    <div class="player">
-                        <p class="player__name">елисей</p>
-                        <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
-                    </div>
-                    <div class="player">
-                        <p class="player__name">дима</p>
-                        <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
-                    </div>
                 </div>
             </div>
             <div class="settings">
                 <p class="settings__header">настройки</p>
-
                 <div class="settings__size">
                     <p class="settings__text">размер поля: </p>
                     <div class="setting">
@@ -120,4 +103,5 @@
         </div>
     </div>
 </body>
+ <script src="/js/socket.js"></script>
 {% endblock %}
