show lobby link

--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -22,6 +22,7 @@
             <div class="players">
                 <div class="list-players">
                 </div>
+                <p class="lobby-link">http://127.0.0.1:8000/lobby</p>
             </div>
             <div class="settings">
                 <p class="settings__header">настройки</p>
