--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -13,7 +13,7 @@
             <img src="/images/logo.png" alt="logo" class="logo">
             <div class="profile">
                 <p class="profile__nickname">{{user.login ?? 'славянин'}}</p>
-                <p class="profile__nickname">{{user.playerId ?? 'her'}}</p>
+                <p class="profile__playerId">{{user.playerId ?? 'her'}}</p>
                 <input class="player_id" type="hidden" value="{{ user.playerId }}" >
                 <img src="/images/avatar-placeholder.png" alt="avatar" class="profile__avatar">
             </div>
