pause, ui, countdown and game-over styles

--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -38,7 +38,7 @@
    </main>
 </body>
 <script src="/js/game/player.js"></script>
-<script src="/js/game/interface.js"></script>
+<script src="/js/game/ui.js"></script>
 <script src="/js/game/figures.js"></script>
 <script src="/js/game/images.js"></script>
 <script src="/js/game/game.js"></script>
