--- a/public/css/game-over.css
+++ b/public/css/game-over.css
@@ -3,7 +3,7 @@
     margin: 0;
     font-family: "Russo One", sans-serif;
     font-weight: 400;
-    color: #dba1a1;
+    color: #9CCA95;
     text-transform: uppercase;
 }
 
@@ -21,11 +21,11 @@
     display: flex;
     align-items: center;
     justify-content: end;
-    background-color: #3e2424;
-    border-top: 3px solid #794545;
-    border-left: 3px solid #623d3d;
-    border-bottom: 3px solid #241616;
-    border-right: 3px solid #321d1d;
+    background-color: #243e25;
+    border-top: 3px solid #45794f;
+    border-left: 3px solid #3d6242;
+    border-bottom: 3px solid #162419;
+    border-right: 3px solid #1d3220;
     padding-right: 20px;
 }
 
@@ -55,11 +55,11 @@
     justify-content: center;
     flex-direction: column;
     width: 78%;
-    background-color: #3e2424;
-    border-top: 3px solid #794545;
-    border-left: 3px solid #623d3d;
-    border-bottom: 3px solid #241616;
-    border-right: 3px solid #321d1d;
+    background-color: #0F160D;
+    border-top: 3px solid #45794f;
+    border-left: 3px solid #3d6242;
+    border-bottom: 3px solid #162419;
+    border-right: 3px solid #1d3220;
     padding: 20px;
     gap: 20px;
 }
@@ -71,7 +71,7 @@
 .score 
 {
     font-size: 92px;
-    color: #f3c5c5;
-    background-color: #361F1F;
+    color: #E2FCDE;
+    background-color: #162113;
     text-align: center;
 }
