--- a/templates/multiplayer.html.twig
+++ b/templates/multiplayer.html.twig
@@ -60,7 +60,7 @@
 <script src="/js/game/game-mode.js"></script>
 <script src="/js/game/game-end.js"></script>
 <script src="/js/game/player.js"></script>
-<script src="/js/game/interface.js"></script>
+<script src="/js/game/ui.js"></script>
 <script src="/js/game/figures.js"></script>
 <script src="/js/game/images.js"></script>
 <script src="/js/game/game.js"></script>
