--- a/templates/lobby.html.twig
+++ b/templates/lobby.html.twig
@@ -67,7 +67,7 @@
                     </div>
                 </div>
             </div>
-            <a href="/multiplayer">начать игру</a>
+            <a class="start-game" href="/multiplayer">начать игру</a>
         </div>
         <div class="user-profile">
             <div class="user-profile__header">
